Correct not centered description

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -29,7 +29,6 @@
     font-weight: 300
     font-style: normal
     color: $gama
-    width: 70%
     margin: 0 auto 10px
 
     // if you put some links in your bio. ;)
